==> luanjaardim/ATMega_Cavalinho/lib/lcd/lcd.cpp <==
#include <lcd.h>

#define LCD_Dir  DDRD			/* Define LCD data port direction */
#define LCD_Port PORTD			/* Define LCD data port */
#define RS PD2				/* Define Register Select pin */
#define RW PD3				/* Define Read or Write mode pin */
#define EN PB0 				/* Define Enable signal pin */

void LCD_Command( unsigned char cmnd )
{
	LCD_Port = (LCD_Port & 0x0F) | (cmnd & 0xF0); /* sending upper nibble */
	LCD_Port &= ~(1<<RS);		/* RS=0, command reg. */
	PORTB |= (1<<EN);		/* Enable pulse */
	_delay_us(1);
	PORTB &= ~(1<<EN);
	_delay_us(200);

	LCD_Port = (LCD_Port & 0x0F) | (cmnd << 4);  /* sending lower nibble */
	PORTB |= (1<<EN);
	_delay_us(1);
	PORTB &= ~(1<<EN);
	_delay_us(200);
}

void LCD_Char( unsigned char data )
{
	LCD_Port = (LCD_Port & 0x0F) | (data & 0xF0); /* sending upper nibble */
	LCD_Port |= (1<<RS);		/* RS=1, data reg. */
	PORTB |= (1<<EN);
	_delay_us(1);
	PORTB &= ~(1<<EN);

	_delay_us(200);

	LCD_Port = (LCD_Port & 0x0F) | (data << 4); /* sending lower nibble */
	PORTB |= (1<<EN);
	_delay_us(1);
	PORTB &= ~(1<<EN);
	_delay_ms(2);
}

void LCD_Init(void)			/* LCD Initialize function */
{
	LCD_Dir = 0xF0;			/* Make LCD port direction DDRD 4-7 output */
	LCD_Dir |= (1 << RS | 1 << RW);	/* Make LCD RS and RW pin output */
	LCD_Port &= ~(1<<RW); /* Enters Write mode */
	DDRB |= (1 << EN);	/* Make EN pin output */
	_delay_ms(200);			/* LCD Power ON delay always >15ms */
	
	LCD_Command(0x02);		/* send for 4 bit initialization of LCD  */
	LCD_Command(0x28);              /* 2 line, 5*7 matrix in 4-bit mode */
	LCD_Command(0x0c);              /* Display on cursor off*/
	LCD_Command(0x06);              /* Increment cursor (shift cursor to right)*/
	LCD_Command(0x01);              /* Clear display screen*/
	_delay_ms(2);
}

void LCD_String(char *str)		/* Send string to LCD function */
{
	int i;
	for(i=0;str[i]!=0;i++)		/* Send each char of string till the NULL */
	{
		LCD_Char (str[i]);
	}
}

void LCD_String_xy(char row, char pos, char *str)	/* Send string to LCD with xy position */
{
	if (row == 0 && pos<16)
	LCD_Command((pos & 0x0F)|0x80);	/* Command of first row and required position<16 */
	else if (row == 1 && pos<16)
	LCD_Command((pos & 0x0F)|0xC0);	/* Command of first row and required position<16 */
	LCD_String(str);		/* Call LCD string function */
}

void LCD_Clear()
{
	LCD_Command (0x01);		/* Clear display */
	_delay_ms(2);
	LCD_Command (0x80);		/* Cursor at home position */
}
